Fix fullscreen edition button alignment

--- a/client/components/Day/day.less
+++ b/client/components/Day/day.less
@@ -126,7 +126,7 @@ section.day {
       border-radius: 0;
 
       div.actions button.close {
-        display: block;
+        display: inline-block;
       }
 
       textarea {
